--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8779ed80-afb9-4d06-983d-0c9fd9d6ec39",
    "metadata": {
     "ExecuteTime": {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e836b3e0-589e-4494-bb4d-7ef3e4960d59",
    "metadata": {
     "ExecuteTime": {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b723323f-19d4-4c4e-8a66-19b03a8536f2",
    "metadata": {
     "ExecuteTime": {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -98,12 +98,12 @@
    },
    "outputs": [],
    "source": [
-    "root = 'big-data-course-2024-projects/reviews/'"
+    "root = 'reviews/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7e8c1d01-8fbd-4346-b7b6-c5a7283dc784",
    "metadata": {
     "ExecuteTime": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7b0699e1-006d-4c7d-9e0d-0493563b5656",
    "metadata": {
     "ExecuteTime": {
@@ -130,9 +130,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emiel\\AppData\\Local\\Temp\\ipykernel_1004\\1899272772.py:2: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "C:\\Users\\emiel\\AppData\\Local\\Temp\\ipykernel_15324\\1899272772.py:2: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  text = BeautifulSoup(text, \"html.parser\").get_text()\n",
-      "C:\\Users\\emiel\\AppData\\Local\\Temp\\ipykernel_1004\\1899272772.py:2: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
+      "C:\\Users\\emiel\\AppData\\Local\\Temp\\ipykernel_15324\\1899272772.py:2: MarkupResemblesLocatorWarning: The input looks more like a URL than markup. You may want to use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
       "  text = BeautifulSoup(text, \"html.parser\").get_text()\n"
      ]
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c1dca1e4-db0e-4b86-95dd-c664ab8409e1",
    "metadata": {
     "ExecuteTime": {
@@ -156,7 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\emiel\\AppData\\Local\\Temp\\ipykernel_1004\\1899272772.py:2: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
+      "C:\\Users\\emiel\\AppData\\Local\\Temp\\ipykernel_15324\\1899272772.py:2: MarkupResemblesLocatorWarning: The input looks more like a filename than markup. You may want to open this file and pass the filehandle into Beautiful Soup.\n",
       "  text = BeautifulSoup(text, \"html.parser\").get_text()\n"
      ]
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7d0cc0c9-855b-405e-9b10-e9d0c635cc0b",
    "metadata": {
     "ExecuteTime": {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5449bf8f-4e42-486f-b83c-7fab499cbfb1",
    "metadata": {
     "ExecuteTime": {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "6b40453b-bead-464a-8675-970836275b11",
    "metadata": {
     "ExecuteTime": {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6384ecd3-ae66-48d7-96fe-44555e36df7e",
    "metadata": {
     "ExecuteTime": {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c98244d2-e9a9-4dbc-b3da-c5fa1c87041e",
    "metadata": {
     "ExecuteTime": {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "721e8d5b-ddb8-4605-8a51-028a8af9fb9f",
    "metadata": {
     "ExecuteTime": {
@@ -351,63 +351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 611/611 [01:08<00:00,  8.95it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: Train Loss = 0.575, Train Accuracy = 0.7\n",
-      "Epoch 1: Test Loss = 0.566, Test Accuracy = 0.721\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/5: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 611/611 [01:07<00:00,  9.10it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2: Train Loss = 0.538, Train Accuracy = 0.724\n",
-      "Epoch 2: Test Loss = 0.566, Test Accuracy = 0.727\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/5: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 611/611 [01:07<00:00,  9.02it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3: Train Loss = 0.441, Train Accuracy = 0.789\n",
-      "Epoch 3: Test Loss = 0.62, Test Accuracy = 0.706\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/5:   4%|█████████▏                                                                                                                                                                                                                                                      | 22/611 [00:02<01:08,  8.59it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[14], line 46\u001B[0m\n\u001B[0;32m     43\u001B[0m loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[0;32m     44\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[1;32m---> 46\u001B[0m total_loss \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[43mloss\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mitem\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     48\u001B[0m predictions \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39msigmoid(logits)\u001B[38;5;241m.\u001B[39mview(\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m     49\u001B[0m predicted_labels \u001B[38;5;241m=\u001B[39m (predictions \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0.5\u001B[39m)\u001B[38;5;241m.\u001B[39mfloat()\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+      "Epoch 1/5:  60%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉                                                                                                       | 364/611 [00:41<00:27,  8.83it/s]"
      ]
     }
    ],
