--- a/main.ipynb
+++ b/main.ipynb
@@ -88,6 +88,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38a57a8b-a232-4fbd-be4d-cc9af68d86b2",
+   "metadata": {},
+   "source": [
+    "# Load in the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "initial_id",
@@ -181,21 +189,6 @@
    "outputs": [],
    "source": [
     "#train_data, test_data = train_test_split(df, test_size=0.2, random_state=RANDOM_SEED)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5449bf8f-4e42-486f-b83c-7fab499cbfb1",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-03-03T23:30:20.604673Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with open(root + \"category.json\", \"r\", encoding=\"utf-8\") as file:\n",
-    "    data = json.load(file)"
    ]
   },
   {
@@ -313,33 +306,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e303a92b-020a-42b2-9c9a-43e36cd8e2ec",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-03-03T23:30:20.607673700Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"en reference a l'expo sur fernand pelez, je mentionne les humbles qui apportent tout le sel a cette nouvelle histoire de cendrillon. que ce soit l'amie prostituee, le liftier, le chauffeur, etc. chacun prend fait et cause pour l'heroine malgre ou a cause de son aspect gazelle perdue au milieu des lions. julia roberts, qui semble gaspiller son ame et son temps sur les trottoirs de los angeles, fait mieux que defendre son role, elle l'incarne prodigieusement avec ses yeux la scene je n'embrasse pas, son rire la scene du collier!, ses larmes la scene de l'opera !, son corps sa posture lorsqu'elle s'appuie contre le mur de l'hotel !. ce qui explique que beaucoup de ces scenes sont devenues cultes. outre le talent des acteurs des premiers aux seconds roles, la qualite du scenario donne une belle epaisseur humaine et psychologique a des situations qui rappellent les cliches du cinema hollywoodien. ce qui ne gache rien, il y a un bonus commentaire critique du film par le realisateur qui vaut le detour.\""
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "518c8900-7deb-43b9-a941-28b3cd401c1f",
+   "metadata": {},
    "source": [
-    "train_data.review_body.tolist()[14]"
+    "# Finetune the pre-trained model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "721e8d5b-ddb8-4605-8a51-028a8af9fb9f",
    "metadata": {
     "ExecuteTime": {
@@ -351,7 +327,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5:  60%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉                                                                                                       | 364/611 [00:41<00:27,  8.83it/s]"
+      "Epoch 1/5: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 611/611 [01:09<00:00,  8.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: Train Loss = 0.577, Train Accuracy = 0.699\n",
+      "Epoch 1: Test Loss = 0.577, Test Accuracy = 0.722\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Parent directory models does not exist.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 60\u001b[0m\n\u001b[0;32m     57\u001b[0m test_loss, test_accuracy \u001b[38;5;241m=\u001b[39m evaluate(model, test_loader, criterion, device)\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mepoch\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: Test Loss = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mround\u001b[39m(test_loss,\u001b[38;5;241m3\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Test Accuracy = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mround\u001b[39m(test_accuracy,\u001b[38;5;241m3\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 60\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstate_dict\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmodels/bert_epoch_\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mepoch\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m.pth\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m test_accuracy \u001b[38;5;241m>\u001b[39m best_test_accuracy:\n\u001b[0;32m     63\u001b[0m     best_test_accuracy \u001b[38;5;241m=\u001b[39m test_accuracy\n",
+      "File \u001b[1;32m~\\.conda\\envs\\DSP-project\\Lib\\site-packages\\torch\\serialization.py:849\u001b[0m, in \u001b[0;36msave\u001b[1;34m(obj, f, pickle_module, pickle_protocol, _use_new_zipfile_serialization, _disable_byteorder_record)\u001b[0m\n\u001b[0;32m    846\u001b[0m _check_save_filelike(f)\n\u001b[0;32m    848\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _use_new_zipfile_serialization:\n\u001b[1;32m--> 849\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43m_open_zipfile_writer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m opened_zipfile:\n\u001b[0;32m    850\u001b[0m         _save(\n\u001b[0;32m    851\u001b[0m             obj,\n\u001b[0;32m    852\u001b[0m             opened_zipfile,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    855\u001b[0m             _disable_byteorder_record,\n\u001b[0;32m    856\u001b[0m         )\n\u001b[0;32m    857\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "File \u001b[1;32m~\\.conda\\envs\\DSP-project\\Lib\\site-packages\\torch\\serialization.py:716\u001b[0m, in \u001b[0;36m_open_zipfile_writer\u001b[1;34m(name_or_buffer)\u001b[0m\n\u001b[0;32m    714\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    715\u001b[0m     container \u001b[38;5;241m=\u001b[39m _open_zipfile_writer_buffer\n\u001b[1;32m--> 716\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mcontainer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname_or_buffer\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\.conda\\envs\\DSP-project\\Lib\\site-packages\\torch\\serialization.py:687\u001b[0m, in \u001b[0;36m_open_zipfile_writer_file.__init__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    685\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C\u001b[38;5;241m.\u001b[39mPyTorchFileWriter(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_stream))\n\u001b[0;32m    686\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 687\u001b[0m     \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPyTorchFileWriter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Parent directory models does not exist."
      ]
     }
    ],
@@ -423,6 +421,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30b3d237-3914-4eff-a27a-ce32efe66c36",
+   "metadata": {},
+   "source": [
+    "# Generate the files for online submission"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9d6234a8-d42b-4250-95c2-2c7496da3f87",
@@ -461,33 +467,6 @@
     "generate_predictions_csv(test_hidden_df, \"test_hidden.csv\", model, tokenizer, device)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "455008ee-90ea-4a39-a500-0eb78b5c86be",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-03-03T23:30:20.610674500Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "validation_hidden_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0405d81e-18b3-40ac-bbab-11da205a8e8e",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-03T23:30:20.611674600Z",
-     "start_time": "2025-03-03T23:30:20.610674500Z"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
